@@ -51,6 +51,7 @@ Luke-Jr <luke@dashjr.org>
 Sree Harsha Totakura <sreeharsha@totakura.in>
 Hani Benhabiles <kroosec@gmail.com>
 Guy Martin <gmsoft@tuxicoman.be>
+Robert Groenenberg <robert.groenenberg@broadforward.com>
 
 
 Documentation contributions also came from:
