@@ -1,3 +1,12 @@
+Tue Mar 31 10:28:26 CEST 2015
+	Adding MHD_OPTION_NOTIFY_CONNECTION,
+	MHD_CONNECTION_NOTIFY_STARTED,
+	MHD_CONNECTION_NOTIFY_CLOSED and
+	MHD_CONNECTION_INFO_SOCKET_CONTEXT to allow
+	applications to trigger operations when TCP
+	connections start or end, instead of just
+	exposing HTTP requests starting and ending. -RG/CG
+
 Thu Feb 26 09:55:43 CET 2015
 	Fixing bug that prevented MHD_OPTION_HTTPS_MEM_DHPARAMS
 	from working within a MHD_OPTION_ARRAY. -DD
